plugins {
    id 'maven-publish'
    id 'java-library'
    id 'eclipse'
}

group = 'bricktricker'
version = '1.5.1'
java.toolchain.languageVersion = JavaLanguageVersion.of(21)

repositories {
    mavenLocal()
    mavenCentral()
    maven {
        name = 'NeoForge'
        url = 'https://maven.neoforged.net/releases'
    }
    maven {
        name = "mojang"
        url = "https://libraries.minecraft.net/"
    }
}

jar {
    manifest {
        attributes([
                'Specification-Title':      project.name,
                'Specification-Vendor':     'bricktricker',
                'Specification-Version':    project.version,
                'Implementation-Title':     project.name,
                'Implementation-Version':   project.version,
                'Implementation-Vendor':    'bricktricker',
                'Automatic-Module-Name':    'servercursemanager',
        ] as LinkedHashMap)
    }
}

task distributionJar(type: Jar) {
    archiveClassifier = 'all'
    dependsOn jar
    from project.zipTree(tasks.jar.archiveFile)
    manifest {
        attributes([
                'Specification-Title':      project.name,
                'Specification-Vendor':     'bricktricker',
                'Specification-Version':    project.version,
                'Implementation-Title':     project.name,
                'Implementation-Version':   project.version,
                'Implementation-Vendor':    'bricktricker',
                'Automatic-Module-Name':    'servercursemanager',
        ] as LinkedHashMap)
    }
    from 'COPYRIGHT'
    from 'LICENSE'
}


dependencies {
    implementation('cpw.mods:modlauncher:11.0.4')
    implementation('net.neoforged.fancymodloader:loader:4.0.34')
    implementation('com.electronwill.night-config:core:3.8.0')
    implementation('com.electronwill.night-config:toml:3.8.0')
    implementation('com.google.code.gson:gson:2.10.1')
    implementation("com.mojang:authlib:6.0.54")

    implementation('io.netty:netty-common:4.1.97.Final')
    implementation('io.netty:netty-buffer:4.1.97.Final')
    implementation('io.netty:netty-handler:4.1.97.Final')
    implementation('io.netty:netty-codec:4.1.97.Final')

    implementation('org.apache.logging.log4j:log4j-api:2.22.1')
    implementation('org.apache.commons:commons-lang3:3.14.0')
}

artifacts {
    archives jar
    archives distributionJar
}

tasks.assemble.dependsOn tasks.distributionJar

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
}
